Patch add and remove from array - generalized documentation
