# src/main/java/gae/piaz/jsonpatch/controller/dto/AuthorDTO.java
@@ -3,4 +3,4 @@ package gae.piaz.jsonpatch.controller.dto;
 import lombok.Builder;
 
 @Builder
-public record BookDTO(Integer id, String title, String authorName) {}
+public record AuthorDTO(Integer id, String name) {}
